# rtipc-dbus

./: .gitmodules  CMakeLists.txt  README.md
client/: client.c  client.h  main.c
server/: main.c  server.c  server.h  service.c  service.h
